Alteração feita no index
Concertei erro de português na linha 14 do <p></p>.

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,6 +11,6 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, facere saepe debitis incidunt, repudiandae totam quaerat eos in tempora placeat a, aliquid tenetur eaque? Nesciunt repellendus minima laborum quisquam animi.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore et earum facilis dignissimos quibusdam, eum, id tempora ducimus nobis repellat veniam rerum vel officiis. Molestias repellat quis earum fugit nam.</p>
-    <p>Esee palagrafo foi adicionado dentro do github desktop para LINUX</p>
+    <p>Esse palagrafo foi adicionado dentro do github desktop para LINUX</p>
 </body>
 </html>
